lenovo_huyhai1994 update project

--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,12 @@ dependencies {
     implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.10.Final'
 
     implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.7.0'
+
+    /*validate các trường dữ liệu trong form.*/
+    // https://mvnrepository.com/artifact/javax.validation/validation-api
+    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+    // https://mvnrepository.com/artifact/org.hibernate/hibernate-validator
+    implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.0.10.Final'
 }
 
 test {
